# text_to_sql

./: .gitignore  pyproject.toml
data/: queries.json
src/app/: main.py  utils.py
src/app/api/: ask.py  feedback.py
src/app/core/: seed.py
src/app/models/: SQLresponse.py  feedback_request.py
src/app/scripts/: extract_variables.py  forbid_actions.py  gemini_service.py  prompt.py  schema.py
