[project]
name = "text-to-sql"
version = "0.1.0"
description = "FastAPI + NLP + ChromaDB project"
authors = []
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "sentence-transformers",
    "chromadb",
    "spacy",
    "thefuzz",
    "pyyaml",
    "google-genai",
    "python-dotenv"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"